--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,14 @@ fastapi = "^0.97.0"
 unicorn = "^2.0.1.post1"
 uvicorn = "^0.22.0"
 pytest = "^7.3.2"
+jinja2 = "^3.1.2"
+sqlalchemy = "^2.0.16"
+envparse = "^0.2.0"
+isort = "^5.12.0"
+black = "^23.3.0"
+psycopg2-binary = "^2.9.6"
+alembic = "^1.11.1"
+asyncpg = "^0.27.0"
 
 
 [build-system]
