--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ black = "^23.3.0"
 psycopg2-binary = "^2.9.6"
 alembic = "^1.11.1"
 asyncpg = "^0.27.0"
+greenlet = "^2.0.2"
+pydantic = {extras = ["email"], version = "^1.10.9"}
+pyjwt = "^2.7.0"
 
 
 [build-system]
