--- a/isort.conf
+++ b/isort.conf
@@ -6,6 +6,6 @@ include_trailing_comma = true
 use_parentheses = true
 skip = drafts, .git, migrations
 skip_glob = .venv*, .*
-default_section = FIRSTPARTY
+default_section = THIRDPARTY
 src_paths = shift
-sections = FUTURE, STDLIB, SECONDPARTY, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
+sections = FUTURE, STDLIB, FIRSTPARTY, LOCALFOLDER
